Prevent long text strings from squashing the image container width.

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -63,6 +63,7 @@ body {
 
 .image-container {
   width: 80px;
+  min-width: 80px;
   height: 80px;
   background-color: #DDD;
   margin-right: 15px;
